--- a/css/index.css
+++ b/css/index.css
@@ -3,6 +3,47 @@
     src: url(DigitalNumbers-Regular.ttf);
 }
 
+body:not(.dark) {
+    --color-background: white;
+    --color-text: black;
+
+    --color-tipbox-border: cornflowerblue;
+    --color-tipbox-background: lightblue;
+
+    --color-timer-border: crimson;
+
+    --color-button-border: goldenrod;
+    --color-button-background: gold;
+
+    --color-settings-border: black;
+    --color-settings-background: white;
+}
+
+body.dark {
+    --color-background: black;
+    --color-text: white;
+
+    --color-tipbox-border: mediumblue;
+    --color-tipbox-background: midnightblue;
+
+    --color-timer-border: maroon;
+
+    --color-button-border: chocolate;
+    --color-button-background: saddlebrown;
+
+    --color-settings-border: white;
+    --color-settings-background: black;
+}
+
+body {
+    background-color: var(--color-background);
+    color: var(--color-text);
+}
+
+.hidden {
+    display: none!important;
+}
+
 #time-input {
     font-family: monospace;
     width: 5ch;
@@ -10,14 +51,14 @@
 
 .tipbox {
     margin: 8px;
-    border: 2px solid cornflowerblue;
+    border: 2px solid var(--color-tipbox-border);
     border-radius: 8px;
     padding: 8px;
-    background-color: lightblue;
+    background-color: var(--color-tipbox-background);
 }
 
 #timer {
-    display:none;
+    display: flex;
     height: 95vh;
     justify-content: center;
     align-items: center;
@@ -25,7 +66,7 @@
 }
 
 #timer-container {
-    border: 8px solid maroon;
+    border: 8px solid var(--color-timer-border);
     border-radius: 30px;
     width: 50vw;
     min-width: 400px;
@@ -44,12 +85,31 @@
     clip-path: circle();
     width: 75px;
     height: 75px;
-    border: 5px outset goldenrod;
+    border: 5px outset var(--color-button-border);
     border-radius: 50px;
-    background-color: gold;
+    background-color: var(--color-button-background);
+}
+
+#timer-button:active {
+    border-style: inset;
 }
 
 #total-timer {
     position: absolute;
-    bottom: 16px;
+    bottom: 32px;
+}
+
+#settings {
+    max-height: 24px;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    display: flex;
+    justify-content: right;
+}
+
+#settings button {
+    border: 1px solid var(--color-settings-border);
+    background-color: var(--color-settings-background);
+    color: var(--color-text);
 }
